学习回溯算法中的排列问题，以及复习字符串和二叉树中的递归、迭代和层序遍历